added registretation - needs clean up

--- a/backendAPI/appsettings.json
+++ b/backendAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "conn": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AngularFrontendDb;TrustServerCertificate=True"
+  },
+  "JWT": {
+    "ValidAudience": "https://localhost:7153",
+    "ValidIssuer": "https://localhost:7153",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  },
   "AllowedHosts": "*"
 }
