--- a/backendAPI/appsettings.json
+++ b/backendAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "conn": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AngularFrontendDb;TrustServerCertificate=True"
+    "conn": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Applicatie;TrustServerCertificate=True;Integrated Security=True;"
   },
   "JWT": {
     "ValidAudience": "https://localhost:7153",
